--- a/my_api/requirements.txt
+++ b/my_api/requirements.txt
@@ -12,7 +12,7 @@ importlib-metadata==3.1.1
 itsdangerous==1.1.0
 Jinja2==2.11.2
 joblib==0.17.0
-MarkupSafe @ file:///Users/runner/miniforge3/conda-bld/markupsafe_1602267318042/work
+MarkupSafe==1.1.1
 murmurhash==1.0.4
 numpy==1.19.4
 pandas==1.1.4
