copy everything into docker

--- a/my_api/Dockerfile
+++ b/my_api/Dockerfile
@@ -13,9 +13,10 @@ RUN pip3 install -r requirements.txt
 
 # COPY APP
 COPY . /my_api
-WORKDIR /
 COPY . .
-RUN ls
+RUN LS
+WORKDIR /
+
 
 # RUN WSGI SERVER
 CMD ["gunicorn", "-w", "3", "-b", ":5000", "-t", "360", "--reload", "my_api.my_wsgi:app"]
