--- a/my_api/requirements.txt
+++ b/my_api/requirements.txt
@@ -6,6 +6,7 @@ click==7.1.2
 cymem==2.0.4
 en-core-sci-lg @ https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.3.0/en_core_sci_lg-0.3.0.tar.gz
 Flask==1.1.2
+Flask-Cors==3.0.9
 gunicorn==20.0.4
 idna==2.10
 importlib-metadata==3.1.1
